Makes the deallocation helper work anew with Java >= 1.9. Note that there is still a warning when trying to access the "att" field by reflection